<resources>
	<string name="app_name">Package Tracker</string>
	<string name="label_shortcut_add">Add manually</string>
	<string name="label_shortcut_scan">Scan barcode</string>
	<string name="navigation_item_all">All</string>
	<string name="navigation_item_delivered">Delivered</string>
	<string name="navigation_item_on_the_way">On the way</string>
	<string name="frame_empty_tip">Click \"Add\" button to add packages</string>
	<string name="frame_empty_tip_delivering">No package delivering</string>
	<string name="frame_empty_tip_delivered">No package delivered</string>
	<string name="frame_empty_tip_all">You can add a package from search box</string>
	<string name="action_search">Search</string>
	<string name="action_read_all">Mark all read</string>
	<string name="action_import_export">Import/Export</string>
	<string name="action_settings">Settings</string>
	<string name="action_refresh">Refresh</string>
	<string name="item_text_cannot_get_package_status">Cannot get the latest status.</string>
	<string-array name="item_status_description">
		<item>Delivering</item>
		<item>Other</item>
		<item>Error</item>
		<item>Delivered</item>
		<item>Returned</item>
		<item>On the way</item>
		<item>Returning</item>
	</string-array>
	<string name="action_remove">Remove</string>
	<string name="toast_item_removed">%s has been removed.</string>
	<string name="toast_item_removed_action">Undo</string>
	<string name="toast_all_read">%d items has been marked read.</string>
	<string-array name="package_status_filter_entries">
		<item>@string/navigation_item_on_the_way</item>
		<item>@string/navigation_item_delivered</item>
		<item>@string/navigation_item_all</item>
	</string-array>
	<string name="activity_add">Add package</string>
	<string name="text_field_number">Package number</string>
	<string name="toast_number_wrong">Your number is wrong. Check it and try again.</string>
	<string name="toast_number_exist">The package is in the list. Don\'t add it repeatedly.</string>
	<string name="operation_scan">Scan code</string>
	<string name="operation_manually_choose_company">This is not the correct company?</string>
	<string name="operation_manually_choose_company_when_cannot_find">Choose company manually</string>
	<string name="message_no_internet_connection">No Internet connection.</string>
	<string name="description_no_internet_connection">Please turn on Wi-Fi or mobile network and retry.</string>
	<string name="message_no_found">The package seems not exist.</string>
	<string name="description_no_found">Check your package number or choose the correct company.</string>
	<string name="text_field_name">Package name (Optional)</string>
	<string name="message_successful_format">The package \"%1$s(%2$s)\" is ready to be added. Now you can give it a name as recognition.</string>
	<string name="description_successful_format">Latest status: %1$s (%2$s)</string>
	<string name="package_name_unnamed">Package %s</string>
	<string name="toast_unknown_error">Something wrong happened! Back to input and try again.</string>
	<string name="stepper_detect_company_title">Detect delivery company</string>
	<string name="stepper_detect_company_summary">Package number: %s</string>
	<string name="stepper_detect_company_text">Please wait…</string>
	<string name="stepper_choose_company_title">Choose correct company</string>
	<string name="stepper_try_again_button">Try again</string>
	<string name="stepper_next_button">Next</string>
	<string name="stepper_choose_button">Choose another</string>
	<string name="stepper_back_button">Back</string>
	<string name="stepper_add_button">Add</string>
	<string name="stepper_find_package">Finish add</string>
	<string name="stepper_find_package_summary">Set name for package</string>
	<string name="stepper_company_cannot_detect">Cannot detect company</string>
	<string name="activity_scanner">Scan barcode</string>
	<string name="dialog_explanation_permission_title">Permission Denied</string>
	<string name="dialog_explanation_permission_message">The scanner is built-in plugin so it needs users to grant camera permission for working normally. Without permission, you cannot scan barcode.</string>
	<string name="dialog_explanation_permission_pos_btn">Go to Settings</string>
	<string name="toast_permission_denied">Permission denied. Cannot start scanner.</string>
	<string name="toast_permission_denied_action">Settings</string>
	<string name="action_choose_from_gallery">Choose from gallery</string>
    <string name="toast_cannot_find_any_barcode">Cannot find any barcode.</string>
	<string name="buttonbar_default_left">PREVIOUS</string>
	<string name="buttonbar_default_right">NEXT</string>
	<string name="activity_choose_company">Choose company</string>
	<string name="search_hint_company">Search company....</string>
	<string name="search_no_result">No result.</string>
	<string name="activity_settings">Settings</string>
	<string name="category_user_interface">User interface</string>
	<string name="category_network">Network</string>
	<string name="toast_need_restart">Changes will be applied after restarting app.</string>
	<string name="toast_need_restart_action">Now</string>
	<string name="category_about">About</string>
	<string name="app_version_format">%1$s (%2$d)</string>
	<string name="author_sina_title">Sina weibo</string>
	<string name="author_sina_desc">\@FungGo</string>
	<string name="author_sina_url">https://weibo.com/fython</string>
	<string name="github_repo_title">Github Source</string>
	<string name="github_repo_url">https://github.com/fython/PackageTracker</string>
	<string name="alipay_support_title">Donate through Alipay</string>
	<string name="alipay_support_summary">fythonx@gmail.com</string>
	<string name="alipay_support_account">fythonx\@gmail.com</string>
	<string name="toast_copied_successfully">Copied to clipboard successfully.</string>
	<string name="open_source_license">Open Source License</string>
	<string name="open_source_license_summary">GPL v3</string>
	<string name="icon_designer_title">Icon &amp; Poster Designer</string>
	<string name="icon_designer_summary">+Youlun Zhai</string>
	<string name="icon_designer_url">https://plus.google.com/+YoulunZhai</string>
	<string name="google_plus_title">Google+ Community</string>
	<string name="google_plus_url" translatable="false">https://plus.google.com/communities/101252804054752835772</string>
	<string name="action_view_on_play_store">View on Play Store</string>
	<string name="category_ui_common">Common</string>
	<string name="pref_night_mode">Night Theme</string>
	<string name="pref_show_tips_again">Show tips again</string>
	<string-array name="night_mode_choices">
		<item>Follow System (Default)</item>
		<item>Auto</item>
		<item>Force on</item>
		<item>Force off</item>
	</string-array>
	<string-array name="night_mode_choices_item" translatable="false">
		<item>0</item>
		<item>1</item>
		<item>2</item>
		<item>3</item>
	</string-array>
	<string name="category_notification">Notification</string>
	<string name="item_notification_interval">Notification interval</string>
	<string name="category_contributors">Contributors</string>
	<string name="category_contributors_desc">Without their efforts, we can\'t enjoy better experience.</string>
	<string name="contributors_coderfox">CoderFox</string>
	<string name="contributors_coderfox_desc">Automatically pull company list; Allow to force add package; Enhance Translation</string>
	<string name="contributors_coderfox_weibo_url">https://weibo.com/coderfox</string>
	<string-array name="notification_interval">
		<item>10 minutes</item>
		<item>30 minutes</item>
		<item>60 minutes</item>
		<item>90 minutes</item>
		<item>Never</item>
	</string-array>
	<string-array name="notification_interval_item" translatable="false">
		<item>0</item>
		<item>1</item>
		<item>2</item>
		<item>3</item>
		<item>4</item>
	</string-array>
	<string name="category_push">Push</string>
	<string name="pref_firebase_instance_id">Device Instance Id</string>
	<string name="pref_firebase_instance_id_summary">Click to view or copy your instance id</string>
	<string name="pref_copy_button">Copy</string>
	<string name="pref_register_button">Register</string>
	<string name="pref_push_sync">Sync list now</string>
	<string name="pref_enable_push">Enable push</string>
	<string name="pref_enable_push_summary">Powered by Firebase Cloud Messaging</string>
	<string name="pref_enable_https">Use HTTPS instead</string>
	<string name="pref_api_host">Server host</string>
	<string name="pref_api_port">Server port</string>
	<string name="pref_request_push">Request push now</string>
	<string name="pref_whats_this">What\'s this?</string>
	<string name="fcm_push_intro_title">FCM-Based Push Service</string>
	<string name="fcm_push_intro_msg"><![CDATA[We provide a more effective way to pull the latest status of packages with Firebase Cloud Messaging.
		You can run Package Tracker Push Server in your own server and set up in client.
		<br><br>Client will synchronize list to the server. When new status come up, server will push notification through FCM, which is more power-saving push service built in Google Service.
		<br><br>Push Server source code (Node.js) has been published to GitHub. You can download it and run in your own server.
		<br>GitHub: <a href="https://github.com/fython/PackageTracker-NodeServer">https://github.com/fython/PackageTracker-NodeServer</a>
	]]>
	</string>
	<string name="fcm_push_no_server_button">I don\'t have a server</string>
	<string name="no_server_message">After clicking \"Donate via Alipay\" in settings, you can use my server.</string>
	<string name="item_notification_do_not_disturb">Do not disturb mode</string>
	<string name="item_notification_do_not_disturb_desc">Don\'t send notifications from 23:00 to 06:00.</string>
	<string name="category_auto_detect_services">New package auto-detection</string>
	<string name="item_detect_screen_text">Detect from screen</string>
	<string name="item_detect_screen_text_desc">@string/description_detect_service</string>
	<string name="item_detect_clipboard">Detect from clipboard</string>
	<string name="item_detect_clipboard_desc">When you copied a text including long number, it will show up a bubble to enter app and track your package.</string>
    <string name="category_api">Query API</string>
    <string name="item_package_api_type">Current provider</string>
    <string name="item_package_api_type_kd100">Kuaidi 100</string>
    <string name="item_package_api_type_baidu">Baidu</string>
    <string-array name="item_package_api_types">
        <item>@string/item_package_api_type_kd100</item>
        <item>@string/item_package_api_type_baidu</item>
    </string-array>
    <string-array name="item_package_api_types_values" translatable="false">
        <item>0</item>
        <item>1</item>
    </string-array>
	<string name="item_dark_launcher_icon">Dark launcher icon</string>
	<string name="item_dark_launcher_summary">This feature is only supported on Android 8.0+</string>
    <string name="category_assistant">Assistant</string>
    <string name="text_selection_search_action_title">Search action on text selection toolbar</string>
    <string name="text_selection_search_action_summary">When you select digital text in other applications, the toolbar provides a "search package" operation.</string>
	<string name="action_set_unread">Set unread</string>
	<string name="action_copy_code">Copy code</string>
	<string name="action_share">Share</string>
	<string name="action_delete">Delete</string>
	<string name="dialog_edit_name_title">Edit package</string>
	<string name="edit_icon_title">Edit icon</string>
	<string name="edit_icon_choose">Choose…</string>
	<string name="action_clear">Clear</string>
    <string name="action_filter">Sort by</string>
	<string name="sort_by_update_time">By update time</string>
    <string name="sort_by_name">By name</string>
    <string name="sort_by_create_time">By create time</string>
</resources>