<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/category_notification">

        <SwitchPreference android:key="dont_disturb"
            android:title="@string/item_notification_do_not_disturb"
            android:summary="@string/item_notification_do_not_disturb_desc"/>

        <SimpleMenuPreference android:key="interval"
            android:title="@string/item_notification_interval"
            android:summary="%s"
            android:entries="@array/notification_interval"
            android:entryValues="@array/notification_interval_item"
            android:defaultValue="1"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/category_push">

        <SwitchPreference android:key="enable_push"
            android:title="@string/pref_enable_push"
            android:summary="@string/pref_enable_push_summary"/>

        <Preference android:key="firebase_instance_id"
            android:title="@string/pref_firebase_instance_id"
            android:summary="@string/pref_firebase_instance_id_summary"/>

        <SwitchPreference android:key="enable_https"
            android:title="@string/pref_enable_https"/>

        <EditTextPreference android:key="api_host"
            android:title="@string/pref_api_host"
            android:summary="%s"
            android:singleLine="true"
            android:inputType="textUri"/>

        <EditTextPreference android:key="api_port"
            android:title="@string/pref_api_port"
            android:summary="%s"
            android:maxLength="5"
            android:singleLine="true"
            android:inputType="numberDecimal"/>

        <Preference android:key="push_sync" android:title="@string/pref_push_sync"/>

        <Preference android:key="request_push" android:title="@string/pref_request_push"/>

        <Preference android:key="push_intro" android:title="@string/pref_whats_this"/>

    </PreferenceCategory>

</PreferenceScreen>