<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	tools:ignore="AlwaysShowAction">

	<item
		android:id="@+id/action_edit"
		android:title="@string/dialog_edit_name_title"
		android:icon="@drawable/ic_create_white_24dp"
		app:showAsAction="always"/>
	<item
		android:id="@+id/action_copy_code"
		android:title="@string/action_copy_code"
		android:icon="@drawable/ic_content_copy_white_24dp"
		app:showAsAction="always"/>
	<item android:id="@+id/action_refresh" android:title="@string/action_refresh"/>
	<item android:id="@+id/action_set_unread" android:title="@string/action_set_unread"/>
	<item android:id="@+id/action_share" android:title="@string/action_share"/>
	<item android:id="@+id/action_delete" android:title="@string/action_delete"/>

</menu>