<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

	<item
		android:id="@+id/action_clear"
		android:title="@string/action_clear"
	    android:icon="@drawable/ic_clear_black_24dp"
		android:visible="false"
	    app:showAsAction="always"/>

	<item
		android:id="@+id/action_scan"
		android:title="@string/operation_scan"
		android:icon="@drawable/ic_barcode_scan_black_24dp"
		app:showAsAction="always"/>

	<item
		android:id="@+id/action_read_all"
	    android:title="@string/action_read_all"/>

	<item
		android:id="@+id/action_import_export"
	    android:title="@string/action_import_export"/>

	<item
		android:id="@+id/action_settings"
		android:title="@string/action_settings"/>

</menu>