<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/category_user_interface">

        <SimpleMenuPreference android:key="night_mode"
            android:title="@string/pref_night_mode"
            android:summary="%s"
            android:entries="@array/night_mode_choices"
            android:entryValues="@array/night_mode_choices_item"
            android:defaultValue="0"/>

        <SwitchPreference android:key="dark_launcher_icon"
            android:title="@string/item_dark_launcher_icon"
            android:summary="@string/item_dark_launcher_summary"
            android:enabled="@bool/is_adaptive_icon_supported"
            android:defaultValue="false"
            android:visibility="gone"/>

        <Preference android:key="show_tips_again"
            android:title="@string/pref_show_tips_again"/>

    </PreferenceCategory>

</PreferenceScreen>