<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_search_black_24dp"
        app:showAsAction="always"/>

    <item android:id="@+id/action_filter"
        android:title="@string/action_filter"
        android:icon="@drawable/ic_filter_list_black_24dp"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction">

        <menu>

            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/action_sort_by_update_time"
                    android:title="@string/sort_by_update_time"
                    android:checked="true"/>

                <item
                    android:id="@+id/action_sort_by_name"
                    android:title="@string/sort_by_name"
                    android:checked="false"/>

                <item
                    android:id="@+id/action_sort_by_create_time"
                    android:title="@string/sort_by_create_time"
                    android:checked="false"/>

            </group>

        </menu>

    </item>

</menu>