<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:overScrollMode="never">

	<LinearLayout
			android:orientation="vertical"
			android:layout_width="match_parent"
			android:layout_height="match_parent">

		<moe.feng.common.stepperview.VerticalStepperItemView
				android:id="@+id/stepper_detect_company"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="24dp"
				app:step_title="@string/stepper_detect_company_title"
				app:step_index="1"
				app:step_state="selected">

			<include layout="@layout/fragment_add_dialog_step_0"/>

		</moe.feng.common.stepperview.VerticalStepperItemView>

		<moe.feng.common.stepperview.VerticalStepperItemView
				android:id="@+id/stepper_choose_company"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="8dp"
				app:step_title="@string/stepper_choose_company_title"
				app:step_index="2"
				app:step_state="normal">

			<include layout="@layout/fragment_add_dialog_step_1"/>

		</moe.feng.common.stepperview.VerticalStepperItemView>

		<moe.feng.common.stepperview.VerticalStepperItemView
				android:id="@+id/stepper_find_package"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="8dp"
				app:step_title="@string/stepper_find_package"
				app:step_summary="@string/stepper_find_package_summary"
				app:step_index="3"
				app:step_state="normal"
				app:step_is_last="true"
				android:paddingBottom="16dp">

			<include layout="@layout/fragment_add_dialog_step_2"/>

		</moe.feng.common.stepperview.VerticalStepperItemView>

	</LinearLayout>

</android.support.v4.widget.NestedScrollView>