<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:paddingStart="20dp"
    android:paddingEnd="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_icon_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:alpha="0.78"
        android:textSize="12sp"
        android:paddingStart="4dp"
        android:paddingEnd="0dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/icon_view"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:importantForAccessibility="no"
            android:scaleType="center"
            android:tint="?android:attr/textColorPrimary"/>

        <Button
            android:id="@+id/icon_choose_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_icon_choose"
            android:layout_marginStart="8dp"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"/>

        <Button
            android:id="@+id/icon_clear_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_clear"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"/>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/name_edit"
            android:singleLine="true"
            android:hint="@string/text_field_name"
            tools:text="Test"/>

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>