<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet_add_package"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    android:paddingTop="16dp"
    android:background="?attr/bottomSheetColor"
    android:elevation="8dp"
    android:clickable="true"
    android:focusable="true"
    app:behavior_hideable="true"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="?android:attr/actionBarSize"
        android:paddingBottom="16dp">

        <moe.feng.common.stepperview.VerticalStepperItemView
            android:id="@+id/stepper_input_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:step_title="@string/stepper_detect_company_title"
            app:step_index="1"
            app:step_state="selected">

            <include layout="@layout/fragment_add_dialog_step_0"/>

        </moe.feng.common.stepperview.VerticalStepperItemView>

        <moe.feng.common.stepperview.VerticalStepperItemView
            android:id="@+id/stepper_choose_company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:step_title="@string/stepper_choose_company_title"
            app:step_index="2"
            app:step_state="normal">

            <include layout="@layout/fragment_add_dialog_step_1"/>

        </moe.feng.common.stepperview.VerticalStepperItemView>

        <moe.feng.common.stepperview.VerticalStepperItemView
            android:id="@+id/stepper_find_package"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:step_title="@string/stepper_find_package"
            app:step_summary="@string/stepper_find_package_summary"
            app:step_index="3"
            app:step_state="normal"
            app:step_is_last="true"
            android:paddingBottom="16dp">

            <include layout="@layout/fragment_add_dialog_step_2"/>

        </moe.feng.common.stepperview.VerticalStepperItemView>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>